@@ -1,0 +1,9 @@
+package test.xml.issue2501;
+
+import org.testng.annotations.Test;
+
+public class TestClassSample {
+
+  @Test
+  public void testMethod() {}
+}
